--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -174,6 +174,8 @@ header {
         -webkit-overflow-scrolling: touch;
         scrollbar-width: none; /* Firefox */
         -ms-overflow-style: none; /* IE/Edge */
+        gap: 20px;
+        padding: 0 15px;
     }
     
     .pricing-slider::-webkit-scrollbar {
