--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -128,7 +128,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     </div>
     
     <!-- Swipeable container for mobile only -->
-    <div class="pricing-slider-container mobile-only">
+    <div class="pricing-slider-container mobile-only" style="padding-top: 20px;">
         <div class="pricing-slider">
             <div class="price-box">
                 <div class="price-header">
