--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -154,11 +154,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 </div>
                 <ul class="price-features">
                     <li>Guidance from experienced lifter</li>
+                    <li>Every saturday anytime between 1-4pm</li>
                     <li>Free of charge</li>
                     <li>No strings attached</li>
                 </ul>
                 <div class="price-action">
-                    <a href="/contact" class="btn">Sign-up Now</a>
+                    <a href="/contact" class="btn">Send a mail</a>
                 </div>
             </div>
         </div>
