--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -103,6 +103,13 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
                 <a href="/history" class="btn">Explore Our History</a>
             </section>
+
+            <!-- become membere Link -->
+            <section class="section text-center">
+                <h2 class="section-title centered-title">Our Future</h2>
+                <p class="mb-40">Join T.S.K.V. Spartacus today and become part of our continuing story. Your journey with us starts now!</p>
+                <a href="/become-a-member" class="btn">Be part of Our Future</a>
+            </section>
         </div>
     </main>
 
