--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -98,11 +98,18 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             </section>
 
             <!-- History Link -->
-            <section class="section text-center">
-                <h2 class="section-title centered-title">Our History</h2>
-                <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
-                <a href="/history" class="btn">Explore Our History</a>
-            </section>
+                <div class="about-content">
+                    <div class="about-image">
+                        <img src="Old-Spartacus.jpg" alt="Old-Spartacus">
+                    </div>
+                    <div class="about-text">
+                        <h2 class="section-title centered-title">Our History</h2>
+                            <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
+                        <div class="button-container">
+                            <a href="/history" class="btn">Explore Our History</a>
+                        </div>
+                    </div>
+                </div>
 
             <!-- become membere Link -->
             <section class="section text-center">
