--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -98,7 +98,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             </section>
 
             <!-- History Link -->
-                <div class="about-content">
+                <div class="container">
                     <div class="about-text">
                             <h2 class="section-title centered-title">Our History</h2>
                             <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
@@ -113,7 +113,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 </div>
 
             <!-- become membere Link -->
-            <section class="section text-center">
+            <section class="container">
                 <h2 class="section-title centered-title">Our Future</h2>
                 <p class="mb-40">Join T.S.K.V. Spartacus today and become part of our continuing story. Your journey with us starts now!</p>
                 <a href="/become-a-member" class="btn">Be part of Our Future</a>
