--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -98,19 +98,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             </section>
 
             <!-- History Link -->
-                <div class="container">
-                    <div class="section text-center">
-                            <h2 class="section-title">Our History</h2>
-                            <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
-                        <div class="button-container">
-                            <a href="/history" class="btn">Explore Our History</a>
-                        </div>
-                    </div>
-                    <div class="about-image">
-                        <img src="Old-Spartacus.jpg" alt="Old-Spartacus">
-                    </div>
-                    </br>
+            <section class="section text-center">
+                <h2 class="section-title">Our History</h2>
+                    <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
+                <a href="/history" class="btn">Explore our History/a>
+
+                <div class="about-image">
+                    <img src="Old-Spartacus.jpg" alt="Old-Spartacus">
                 </div>
+            </section>
+        </div>
 
             <!-- become membere Link -->
             <section class="section text-center">
