--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -97,26 +97,22 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 </div>
             </section>
 
-            <!-- History Link -->
-            <section class="section text-center">
-                <h2 class="section-title">Our History</h2>
-                    <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
-                <a href="/history" class="btn">Explore our History/a>
+<!-- History Link -->
+<section class="section text-center">
+    <h2 class="section-title">Our History</h2>
+    <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
+    <a href="/history" class="btn">Explore our History</a>
+    <div class="about-image">
+        <img src="Old-Spartacus.jpg" alt="Old-Spartacus">
+    </div>
+</section>
 
-                <div class="about-image">
-                    <img src="Old-Spartacus.jpg" alt="Old-Spartacus">
-                </div>
-            </section>
-        </div>
-
-            <!-- become membere Link -->
-            <section class="section text-center">
-                <h2 class="section-title">Our Future</h2>
-                <p class="mb-40">Join T.S.K.V. Spartacus today and become part of our continuing story. Your journey with us starts now!</p>
-                <a href="/become-a-member" class="btn">Be part of Our Future</a>
-            </section>
-        </div>
-    </main>
+<!-- Become Member Link -->
+<section class="section text-center">
+    <h2 class="section-title">Our Future</h2>
+    <p class="mb-40">Join T.S.K.V. Spartacus today and become part of our continuing story. Your journey with us starts now!</p>
+    <a href="/become-a-member" class="btn">Be part of Our Future</a>
+</section>
 
     <script is:inline src="/script.js"></script>
 </body>
